# big_data_training

./: README.md  project_structure.txt  pyproject.toml
code/chapter1/data_handling/: csv.py  json.py  ods.py  tsv.py  xlsx.py  xml.py
code/chapter2/web_scraping/: check_httpstatus_code.py  graphs_with_matplotlib.ipynb  read_online_files.py  web_scraping_in_html.py  web_scraping_online.py  web_scraping_selenium.py
code/chapter3/apis_data_recolection/: google_maps_consumption.py  ombd_api_consumption.py  twitter_api_consumption_v1.py  twitter_api_consumption_v2.py  twitter_api_data_streaming.py
code/chapter4/mongodb/: README.md  docker-compose.yml  mongo_data_handling.py
code/chapter5/: linear_algebra_numpy.py  training_pandas.py
code/chapter6/: README_spark_install.md  pyspark-training.py
code/chapter6/spark-docker/: docker-compose.yml
code/chapter7/: pyspark-mongo-db.py  pyspark-spark-sql.py
data/chapter1/: subvenciones.tsv  subvenciones_actualizadas.csv  subvenciones_actualizadas.json  subvenciones_actualizadas.xls  subvenciones_actualizadas.xlsx  subvenciones_actualizadas.xml
data/chapter2/: estructura_horarios.md  horario.txt  mini.html
data/chapter3/: final.csv  final.json
data/chapter5/: titanic_2.xlsx  titanic_ml.csv  titanic_ml.xls  titanic_ml.xlsx
data/chapter7/tmp/csv/: .part-00002-95d743cf-a378-4e7f-8e50-a2ca2b4d4784-c000.csv.crc  part-00009-c682e0d5-12e3-4bb9-92df-86fdf25dc776-c000.csv
data/chapter7/tmp/json/: .part-00002-41688129-f352-4c2d-a956-937f011208ec-c000.json.crc  part-00000-5b707f56-acce-4acd-ba68-62e4c0774ed6-c000.json
