[tool.poetry]
name = "big-data-training"
version = "0.1.0"
description = ""
authors = ["Jiliar Silgado <jsilgado@lexipol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
ezodf = "^0.3.2"
matplotlib = "^3.10.3"
html5lib = "^1.1"
selenium = "^4.33.0"
tweepy = "^4.15.0"
pymongo = "^4.13.0"
numpy = "^2.3.0"
xlsxwriter = "^3.2.3"
pyspark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
